appscore/applicantsapi-service-deploy.yml
apiVersion: v1
kind: Service
metadata:
  name: applicantsapi-service
spec:
  selector:
    app: applicants.api
  ports:
    - protocol: TCP
      port: 8081 #8081 
      targetPort: 80
  type: ClusterIP #LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: applicants.api
  labels:
    app: applicants.api
spec:
  replicas: 1  ### a revoir ??
  selector:
    matchLabels:
      app: applicants.api
  template:
    metadata:
      labels:
        app: applicants.api
    spec:
      containers:
      - name: applicants-api
        image: koceilaamzal/projet-ynov-lesplusde10:applicants.api4
        ports:
        - containerPort: 80
#      restartPolicy: Always
