appscore/jobs-service-deploy.yml
apiVersion: v1
kind: Service
metadata:
  name: jobs-api
spec:
  selector:
    app: jobs.api
  ports:
    - port: 8083 #8083 
      targetPort: 80
  type: ClusterIP #LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobs.api
  labels:
    app: jobs.api
spec:
  replicas: 1  ### a revoir ??
  selector:
    matchLabels:
      app: jobs.api
  template:
    metadata:
      labels:
        app: jobs.api
    spec:
      containers:
      - name: jobs-api
        image: koceilaamzal/projet-ynov-lesplusde10:jobs.api4 #applicants.api
        ports:
        - containerPort: 80
#      restartPolicy: Always
