appscore/user-data-service-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-data
  labels:
    app: user-data
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-data
  template:
    metadata:
      labels:
        app: user-data
    spec:
      containers:
      - name: user-data
        image: koceilaamzal/projet-ynov-lesplusde10:user.data
        ports:
        - containerPort: 6379

---

apiVersion: v1
kind: Service
metadata:
  name: service-user-data
spec:
  selector:
    app: user-data
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
