appscore/web-service-deploy.yml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: web
  ports:
    - port: 8090 ### 8080
      targetPort: 80
  type: NodePort #LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
spec:
  replicas: 1  ### a revoir ??
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: koceilaamzal/projet-ynov-lesplusde10:web4
        ports:
        - containerPort: 80
